--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -4,13 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <script type="text/javascript" src="script.js">
-
-  </script>
+  
   <link rel="stylesheet" href="style.css">
-  <title>Document</title>
+  <title>document</title>
 </head>
 <body>
+  <div>Score:<span>0</span></div>
   <div class="game-intro">
     <img src="./images/logo.png" alt="" class="logo-img">
     <br>
@@ -19,7 +18,11 @@
     <img src="./images/arrows.png" alt="" class="arrows-img">
   </div>
   <div id="game-board">
+    <canvas id='example' width="400" height="600"></canvas>
+    
 
   </div>
 </body>
+<script type="text/javascript" src="script.js"></script>
+ 
 </html>
